--- a/app/src/main/res/layout/item_rating.xml
+++ b/app/src/main/res/layout/item_rating.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:layout_gravity="center_vertical|center_horizontal|center">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|center_horizontal|center"
@@ -52,5 +52,5 @@
                 android:stepSize="0.5" />
         </RelativeLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
